finished product, I hope..

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>My Space Company</title>
+    <title>Outer State Enterprises</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -18,24 +18,44 @@
   <body>
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-      <a class="navbar-brand" href="#">Space Company Boo!</a>
+      <a class="navbar-brand" href="#">Outer State Enterprises</a>
     </nav>
 
     <div class="container">
 
       <div class="starter-template">
-        <h1>This is a Space Company!</h1>
-        <p class="lead">For real, this is about space yo</p>
+        <h1>Outer State Enterprises</h1>
+        <p class="lead">We are Outer State, and this is what we do!</p>
 
-        <p> Short elevator pitch (one sentance).<br>
-            Long Elevator pitch (2-3 paragraphs)<br>
-            3 personas<br>
-            3 “comp” sites that represent similar ideas or other players in your market
-        </p>
       </div>
 
-    </div><!-- /.container -->
+      <h4>Short Pitch:</h4>
+      <p>Outer State Enterprises is a Space Launch specialist that entered the market in 2017 to bring affordable, reliable launches to everyone.</p>
 
+      <h4>Long Pitch:</h4>
+      <p>You want to go to space, and we want to take you there. Competition in this market has been lacking for the past several thousand years, and Outer State Enterprises
+         is here to help change that. Aside from providing citzens, corporations, and governments with lift and transportation capabilities, Outer State is also interested in
+         colonizing and exploiting the world outside of Earth. Be a part of Outer State, and invest in the end of the Universe. </p>
+
+      <h4>Personas:</h4>
+      <ul>
+        <li><strong>Governments:</strong> NASA, for example, is looking to cut costs and keep up with the demands of future research. We can help them accomplish their goals at
+          a fraction of the costs due to our Universal explotation.</li>
+        <li><strong>Corportations:</strong> Resources on Earth are finite, and the ability to expand the playing ground into the outer world is an opportunity that corporations
+          cannot afford to ignore. We provide businesses of all sizes with the ability to expand their horizons, in the most literal sense possible.</li>
+        <li><strong>You:</strong> Yes, you, the evil businessmen, or the Middle Class family looking for an Out of This World vacation. Whether you're looking to exploit the Universe
+          with us, or just to find a reason to avoid Florida, we're here for you. For those looking to help us destroy the Universe, get ahold of Rick. For those looking for something
+          different on their next vacation, contact Denise.</li>
+      </ul>
+
+      <h4>Others in our market:</h4>
+        <ul>
+          <li><a href="http://www.spacex.com/">Space X</a></li>
+          <li><a href="https://www.blueorigin.com/">Blue Origin</a></li>
+          <li><a href="http://www.ulalaunch.com/">United Launch Aliance</a></li>
+        </ul>
+
+    </div><!-- /.container -->
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
